# tellequant

./: .env.example  .gitignore  .vercelignore  README.md  docker-compose.yml  next.config.ts  package.json  tsconfig.json  vercel.json
docs/: DESIGN.md  STACK.md
src/app/: globals.css  layout.tsx  page.tsx
src/app/(auth)/: layout.tsx
src/app/(content)/: layout.tsx
src/components/brand/: logo.tsx
src/components/dashboard/: agent-demo-chat.tsx  agent-form.tsx  agent-tester.tsx  api-key-manager.tsx  billing-actions.tsx  call-transcript.tsx  campaign-form.tsx  doc-uploader.tsx  keys-form.tsx  search-playground.tsx  sidebar.tsx  topbar.tsx
src/components/marketing/: contact-form.tsx  cta.tsx  faq.tsx  features.tsx  footer.tsx  hero.tsx  how-it-works.tsx  live-call-demo.tsx  nav.tsx  page-hero.tsx  pricing.tsx  trusted-by.tsx
src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  label.tsx  select.tsx  switch.tsx
src/lib/: auth.ts  byok.ts  catalog.ts  crypto.ts  stripe.ts  utils.ts  worker-auth.ts
src/lib/billing/: balance.ts  plans.ts
src/lib/llm/: chat.ts
src/lib/rag/: chunk.ts  embed.ts  parse.ts
src/lib/supabase/: client.ts  middleware.ts  server.ts  types.ts
src/lib/telephony/: index.ts  telnyx.ts  twilio.ts  types.ts  (+1 more)
supabase/migrations/: 20260418000000_init.sql  20260419000000_billing.sql  20260419000001_byok_and_credits.sql  20260419000002_demo_sessions.sql  20260419000003_grant_idempotency.sql
worker/: .env.example  Dockerfile  pyproject.toml
worker/tellequant_worker/: __init__.py  api_client.py  config.py  main.py  pipeline.py
(+71 files in other folders)
